project('dm', 'c')
cc = meson.get_compiler('c')
drm = dependency('libdrm')
libinput = dependency('libinput')
udev = dependency('libudev')
libev = cc.find_library('ev', required: true)
executable('dm', ['main.c', 'scene.c', 'input.c', 'interpolate.c', 'render.c', 'backend_drm.c'], dependencies: [drm, libinput, udev, libev])
